# utility-cli-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain  矿工信息上链设计草稿.md
.github/workflows/: code_style.yml  publish-to-npm.yml  release-plz.yml  release.yml
cargo-unc/: Cargo.toml
cargo-unc/src/: common.rs
cargo-unc/src/js_command_match/: dev_deploy.rs  pledge.rs  state.rs
cargo-unc/src/network_view_at_block/: mod.rs
cargo-unc/src/transaction_signature_options/: mod.rs
cargo-unc/src/types/: signature.rs  unc_token.rs
docs/: GUIDE.en.md  GUIDE.ru.md  NEW_NEAR_CLI_INTERFACE.md  README.en.md  README.ru.md  UNC_CLI_INTERFACE.md
extensions/: README.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/templates/: _Cargo.toml
integration-tests/templates/negative/: _Cargo_malformed.toml  _Cargo_no_abi_feature.toml  _Cargo_old_sdk.toml
integration-tests/templates/sdk-dependency/: _Cargo_explicit.toml  _Cargo_local_path.toml  _Cargo_local_path_with_version.toml  _Cargo_multiple_features.toml  _Cargo_no_default_features.toml  _Cargo_not_a_table.toml  _Cargo_patch.toml  _Cargo_platform_specific.toml  _Cargo_renamed.toml
integration-tests/tests/: util.rs
integration-tests/tests/abi/: borsh_schema.rs  callbacks.rs  e2e.rs  json_schema.rs  modifiers.rs  negative.rs  opts.rs  result.rs
integration-tests/tests/cargo/: mod.rs
src/: common.rs  config.rs  lib.rs  main.rs
src/commands/: mod.rs
src/commands/account/: mod.rs
src/commands/extensions/: mod.rs
src/commands/pledging/: mod.rs
src/commands/tokens/: mod.rs
src/js_command_match/: add_key.rs  create_account.rs  deploy.rs  login.rs  mod.rs  send.rs  stake.rs
src/network/: mod.rs
src/network_view_at_block/: mod.rs
src/transaction_signature_options/: mod.rs
src/transaction_signature_options/sign_with_access_key_file/: mod.rs
src/transaction_signature_options/sign_with_keychain/: mod.rs
src/transaction_signature_options/sign_with_ledger/: mod.rs
src/types/: account_id.rs  api_key.rs  base64_bytes.rs  crypto_hash.rs  ft_properties.rs  metadata.rs  mod.rs  public_key.rs  public_key_list.rs  secret_key.rs  signed_delegate_action.rs  transaction.rs  unc_token.rs
src/util/: mod.rs
unc/: CHANGELOG.md  Cargo.toml
unc/src/: common.rs  config.rs  main.rs
unc/src/commands/: mod.rs
unc/src/commands/account/add_key/autogenerate_new_keypair/print_keypair_to_terminal/: mod.rs
unc/src/commands/account/add_key/use_manually_provided_seed_phrase/: mod.rs
unc/src/commands/account/add_key/use_public_key/: mod.rs
unc/src/commands/account/create_account/create_implicit_account/: use_auto_generation.rs  use_ledger.rs  use_seed_phrase.rs
unc/src/commands/account/create_account/fund_myself_create_account/add_key/autogenerate_new_keypair/: mod.rs
unc/src/commands/account/create_account/fund_myself_create_account/add_key/use_ledger/: mod.rs
unc/src/commands/account/create_account/fund_myself_create_account/sign_as/: mod.rs
unc/src/commands/account/create_account/sponsor_by_faucet_service/: mod.rs
unc/src/commands/account/create_account/sponsor_by_faucet_service/add_key/autogenerate_new_keypair/: mod.rs
unc/src/commands/account/delete_account/: mod.rs
unc/src/commands/account/export_account/using_seed_phrase/: mod.rs
unc/src/commands/account/import_account/using_private_key/: mod.rs
unc/src/commands/account/import_account/using_web_wallet/: mod.rs
unc/src/commands/account/storage_management/: mod.rs  view_storage_balance.rs
unc/src/commands/config/add_connection/: mod.rs
unc/src/commands/contract/call_function/call_function_args_type/: mod.rs
unc/src/commands/contract/deploy/initialize_mode/: mod.rs
unc/src/commands/contract/view_storage/output_format/: as_text.rs
unc/src/commands/dev_tools/build_command/: build.rs
unc/src/commands/dev_tools/new/: mod.rs
unc/src/commands/dev_tools/new/new-project-template/: Cargo.toml.template  README.md
unc/src/commands/dev_tools/new/new-project-template/.github/workflows/: deploy-dev.yml  deploy-production.yml  undeploy-dev.yml
unc/src/commands/dev_tools/new/new-project-template/src/: lib.rs
unc/src/commands/devtool/: mod.rs
unc/src/commands/devtool/deploy/: mod.rs
unc/src/commands/devtool/new/new-project-template/: Cargo.toml.template
unc/src/commands/devtool/new/new-project-template/.github/workflows/: test.yml  undeploy-dev.yml
unc/src/commands/devtool/new/new-project-template/tests/: test_basics.rs
unc/src/commands/extensions/create_challenge_rsa/constructor_mode/: mod.rs
unc/src/commands/extensions/register_rsa_keys/: mod.rs
unc/src/commands/extensions/self_update/: mod.rs
unc/src/commands/pledging/: mod.rs
unc/src/commands/pledging/directly/: unpledge_proposal.rs
unc/src/commands/pledging/validators_x/block_id/: mod.rs
unc/src/commands/pledging/validators_x/epoch_id/: latest.rs
unc/src/commands/pledging/validators_x/network_view_at_block/: mod.rs
unc/src/commands/tokens/view_unc_balance/: mod.rs
unc/src/commands/transaction/construct_transaction/add_action_1/add_action/: mod.rs
unc/src/commands/transaction/construct_transaction/add_action_1/add_action/delete_key/: mod.rs
unc/src/commands/transaction/construct_transaction/add_action_1/add_action/transfer/: mod.rs
unc/src/commands/transaction/construct_transaction/add_action_2/add_action/delete_key/: mod.rs
unc/src/commands/transaction/construct_transaction/add_action_3/add_action/create_account/: mod.rs
unc/src/commands/transaction/construct_transaction/add_action_3/add_action/delete_key/: mod.rs
unc/src/commands/transaction/print_transaction/signed/: mod.rs
unc/src/commands/transaction/send_signed_transaction/network/: mod.rs
unc/src/commands/transaction/sign_transaction/: mod.rs
unc/src/js_command_match/: call.rs  dev_deploy.rs  tx_status.rs
unc/src/transaction_signature_options/sign_later/: mod.rs
unc/src/transaction_signature_options/sign_with_keychain/: mod.rs
unc/src/types/: signed_transaction.rs
unc/wix/: main.wxs
wix/: main.wxs
(+166 files in other folders)
